fixed spacing issues on new project form

--- a/app/assets/stylesheets/forms/forms.scss
+++ b/app/assets/stylesheets/forms/forms.scss
@@ -5,6 +5,13 @@
   border-radius: 10px;
   background: whitesmoke;
 }
+.form-container-50{
+  width: 50%;
+  border: 1px solid lightgray;
+  padding: 20px;
+  border-radius: 10px;
+  background: whitesmoke;
+}
 .form-container-100{
   width: 100%;
   border: 1px solid lightgray;
